--- a/books/templates/base.html
+++ b/books/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="de">
 
 <head>
-<title>"Bücher</title>
+<title>Bücher</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
  
