--- a/books/templates/buecher.html
+++ b/books/templates/buecher.html
@@ -9,4 +9,13 @@
     <ul id="menu">
     <li><a href="/buecher/titel_liste/">Bücherliste</a></li>
     </ul>
+    <ul id="menu">
+    <li><a href="/buecher/sign_in/">Registrieren</a></li>
+    </ul>
+    <ul id="menu">
+    <li><a href="/buecher/log_in/">Login</a></li>
+    </ul>
+    <ul id="menu">
+    <li><a href="/buecher/log_out/">Logout</a></li>
+    </ul>
 {% endblock %}
