--- a/books/templates/list_titles.html
+++ b/books/templates/list_titles.html
@@ -4,22 +4,35 @@
 
 {% block content %}
 
-<h1>Titel</h1>
-<style> 
-</style>
+<h1>Bücherliste</h1>
+
+<ul id="menu">
+<li><a href="/buecher/titel_liste/content_list/">Buchbeschreibung nach Titel</a></li>
+</ul>
+
+    <ul id="menu">
+    <li><a href="/buecher/titel_liste/renew/">Ein neues Buch hinzufügen</a></li>
+    </ul>
+
+    <ul id="menu">
+    <li><a href="/buecher/titel_liste/delete_list/">Ein Buch löschen</a></li>
+    </ul>
+
+
+<ul id="menu">
+<li><a href="/buecher/">zurück zur Startseite</a></li>
+</ul>
+
 
 {% for titel_liste in titel_liste %}
-    <div>
-	<p>{{ titel_liste.published_date }}</p>
-        <a >{{ titel_liste.title }}</a> <br> 
-	<a >{{ titel_liste.text }}</a> <br>
-        <a >{{ titel_liste.pub_date }}</a>
-    </div>
-{% endfor %}
+<div>
+<h2>{{ titel_liste.title|escape|urlize }}</h2> 
+<p>{{ titel_liste.author|escape|urlize }}</p>
+<p>{{ titel_liste.pub_date|escape|urlize }}</p>
 
- 
-<ul id="menu">
-<li><a href="/buecher/">zurück</a></li>
-</ul>
+<li><a href="{{ titel_liste.id }}/">{{ titel_liste.title|escape }}</a></li>
+
+</div>
+{% endfor %}
 
 {% endblock %}
